fix some label and add README.md

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
     <div id="encPage" class="page hidden">
       <h2>Generate URL of a crypted message with <span id="toName"></span></h2>
-      <label>Plain message</label>
+      <label>Message</label>
       <textarea type="text" id="plainText" rows="5"></textarea>
       <label>URL</label>
       <a id="cryptedLink" href="#"></a>
     </div>
 
     <div id="decPage" class="page hidden">
-      <h2>Decrypt message</h2>
+      <h2>Decrypt the message</h2>
       <label>Password</label>
       <input type="password" id="decPass" class="password">
       <input type="button" value="Decrypt" id="decBtn">
