--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
 
+    <a class="to-github" href="https://github.com/utubo/shortcrypt">?</a>
   </div>
 
   <script src="https://cdn.jsdelivr.net/gh/mtaketani113/cryptico@1.0.1/cryptico.min.js"></script>
