--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>Generate URL for encrypt a message</h2>
       <label>Name(Optional)</label>
       <input type="text" id="bob" class="bob">
-      <label>Password</label>
+      <label>Key(Passphrase)</label>
       <input type="password" id="encPass" class="password">
       <label>URL</label>
       <a id="receiveBoxLink" href="#"></a>
@@ -32,7 +32,7 @@
 
     <div id="decPage" class="page hidden">
       <h2>Decrypt the message</h2>
-      <label>Password</label>
+      <label>Key(Passphrase)</label>
       <input type="password" id="decPass" class="password">
       <input type="button" value="Decrypt" id="decBtn">
       <label>Message</label>
