--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <h2>Generate URL for encrypt a message</h2>
       <label>Name(Optional)</label>
       <input type="text" id="bob" class="bob">
-      <label>Key(Passphrase)</label>
-      <input type="password" id="encPass" class="password">
+      <label>Key(Don't forget)</label>
+      <input type="password" id="encPass" class="password" name="password">
+      <label><input type="checkbox" id="showEncPass">Show Key</label>
       <label>URL</label>
       <a id="receiveBoxLink" href="#"></a>
     </div>
