fix: add create key button insted of default key

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <input type="text" id="bob" class="bob">
       <label>Key(Don't forget)</label>
       <input type="password" id="encPass" class="password" name="password">
+      <input type="button" value="Create" id="createEncKeyBtn">
       <label><input type="checkbox" id="showEncPass">Show Key</label>
       <label>URL</label>
       <a id="receiveBoxLink" href="#"></a>
