--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div id="startPage" class="page hidden">
       <h2>Generate URL for encrypt a message</h2>
-      <label>Name(Optional)</label>
+      <label>Name (Optional)</label>
       <input type="text" id="bob" class="bob">
-      <label>Key(Don't forget)</label>
+      <label>Key (Don't forget)</label>
       <input type="password" id="encPass" class="password" name="password">
       <input type="button" value="Create" id="createEncKeyBtn">
       <label><input type="checkbox" id="showEncPass">Show Key</label>
@@ -34,7 +34,7 @@
 
     <div id="decPage" class="page hidden">
       <h2>Decrypt the message</h2>
-      <label>Key(Passphrase)</label>
+      <label>Key</label>
       <input type="password" id="decPass" class="password">
       <input type="button" value="Decrypt" id="decBtn">
       <label>Message</label>
