fix: change id: bob->bobName

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="startPage" class="page hidden">
       <h2>Generate URL for encrypt a message</h2>
       <label>Name (Optional)</label>
-      <input type="text" id="bob" class="bob">
+      <input type="text" id="bobName" class="bob">
       <label>Key (Don't forget)</label>
       <input type="password" id="encPass" class="password" name="password">
       <input type="button" value="Create" id="createEncKeyBtn">
