feat: add caution

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
 
     <footer>
-      <a class="to-github" href="https://github.com/utubo/shortcrypt">?</a>
+      ⚠This encryption is not secure !!<br>
+      ⓘ<a href="https://github.com/utubo/shortcrypt#usage">Usage</a>
     </footer>
   </div>
 
