--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <h2>Generate URL for encrypt a message</h2>
       <label>Name (Optional)</label>
       <input type="text" id="bobName" class="bob">
-      <label>Key (Don't forget)</label>
+      <label>🔑Key (Don't forget)</label>
       <input type="password" id="encPass" class="password" name="password">
       <input type="button" value="Create" id="createEncKeyBtn">
       <label><input type="checkbox" id="showEncPass">Show Key</label>
-      <label>URL</label>
+      <label>📭Recevie box URL</label>
       <a id="receiveBoxLink" href="#"></a>
     </div>
 
@@ -28,13 +28,13 @@
       <h2>Generate URL of a crypted message<span class="to-bob hidden"> to {bob}</span></h2>
       <label>Message</label>
       <textarea type="text" id="plainText" rows="5"></textarea>
-      <label>URL (Send this url<span class="to-bob hidden"> to {bob}</span>)</label>
+      <label>📨Message URL (Send this url<span class="to-bob hidden"> to {bob}</span>)</label>
       <a id="cryptedLink" href="#"></a>
     </div>
 
     <div id="decPage" class="page hidden">
       <h2>Decrypt the message</h2>
-      <label>Key</label>
+      <label>🔑Key</label>
       <input type="password" id="decPass" class="password">
       <input type="button" value="Decrypt" id="decBtn">
       <label>Message</label>
