✨feat: add link to create receive box

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h1><a href="./" class="title">Shortcrypt</a></h1>
 
     <div id="startPage" class="page hidden">
-      <h2>Generate URL for encrypt a message</h2>
+      <h2>Create URL for encrypt a message</h2>
       <label>Name (Optional)</label>
       <input type="text" id="bobName" class="bob">
       <label>🔑Key (Don't forget)</label>
       <input type="password" id="encPass" class="password" name="password">
-      <input type="button" value="Create" id="createEncKeyBtn">
+      <input type="button" value="Generate" id="createEncKeyBtn">
       <label><input type="checkbox" id="showEncPass">Show Key</label>
       <label>📭Recevie box URL</label>
       <a id="receiveBoxLink" href="#"></a>
@@ -45,6 +45,7 @@
     <footer>
       ⚠This encryption is not secure !!<br>
       ⓘ<a href="https://github.com/utubo/shortcrypt#usage">Usage</a>
+      🪄<a href="./">Create your receive box!</a>
     </footer>
   </div>
 
