--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <footer>
       ⚠This encryption is not secure !!<br>
-      ⓘ<a href="https://github.com/utubo/shortcrypt#usage">Usage</a>
+      ⓘ<a href="https://github.com/utubo/shortcrypt#usage">Usage</a><br>
       🪄<a href="./">Create your receive box!</a>
     </footer>
   </div>
