--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1><a href="./" class="title">Shortcrypt</a></h1>
 
     <div id="startPage" class="page hidden">
-      <h2>Create URL for encrypt a message</h2>
+      <h2>Create your receive box</h2>
       <label>Name (Optional)</label>
       <input type="text" id="bobName" class="bob">
       <label>🔑Key (Don't forget)</label>
